# magic

./: .gitignore  ReadMe.md  none.vsdx
Image Panorama Stitching Python/: ReadMe.md  main.py
unicode/: CMakeLists.txt  main.cpp
video/: CMakeLists.txt  Menu.cpp  Menu.h  Mouse.cpp  Mouse.h  Transformer.cpp  Transformer.h  VideoInput.cpp  VideoInput.h  include.h  main.cpp  main.py  symbols.h
